# workshop-builder

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  a2a_server.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
configs/: logging.yaml
data/redis/: dump.rdb
data/redis/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
docs/: QUICKSTART.md  diagrams.md
examples/: test_workshop copy.py  test_workshop.py  test_workshop_infra.py
infra/: Dockerfile  Dockerfile.nginx  docker-compose.yml  gunicorn_conf.py  nginx.conf
redis/: Dockerfile  redis.conf
scripts/: build_ui.sh  ingest_repo.py  redis_cli.sh  redis_down.sh  redis_kill.sh  redis_stop.sh  redis_tests.sh  redis_up.sh  rq_worker copy.sh  rq_worker.sh
server/: config.py  deps.py  logging.py  main.py  metrics.py  models.py  security.py
server/routers/: exports.py  generate.py  health.py  ingest.py  knowledge.py  providers.py  settings.py
server/services/: crewai_pipeline.py  events.py  jobs.py  llms.py  local_jobs.py  rag copy 2.py  rag copy.py  rag.py  watsonx copy.py  watsonx.py
server/services/flows/: workshop_flow.py
src/: __init__.py  app.py  config.py
src/models/: __init__.py  book.py  provider.py  repo.py  responses.py  workshop.py
src/routes/: __init__.py  books.py  exports.py  health.py  ingest.py  providers.py  workshops.py
src/services/: __init__.py  ingest_pipeline.py  planning_service.py  providers.py  rag_service.py  repo_service.py  schedule_service.py
src/services/export/: __init__.py  kindle.py  pandoc.py  springer_latex.py
src/templates/springer/: preamble.tex  template.fdb_latexmk  template.fls  template.tex
src/utils/: __init__.py  fs.py  time.py
tests/: test_planner.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  store.ts  styles copy 2.css  styles copy.css
ui/src/components/: AgentPipeline.tsx  BlogEditor.tsx  BookDesigner.tsx  DocumentationEditor.tsx  EbookEditor.tsx  ExportGallery.tsx  ExportPanel.tsx  GenerationProgress.tsx  JournalEditor.tsx  ManuscriptEditor.tsx  PlanPreview.tsx  ProviderPicker.tsx  RepoIngestForm.tsx  ScheduleEditor.tsx  SubmissionEditor.tsx  WorkshopDesigner.tsx  WorkshopEditorBridge.tsx
ui/src/components/editors/: registry.ts
ui/src/components/icons/: Icons.tsx
ui/src/hooks/: useDebounced.ts  useNumberField.ts
ui/src/lib/: api.ts
ui/src/routes/: WizardShell.tsx  docs.tsx  settings.tsx  support.tsx
ui/src/routes/steps/: Step1Intake.tsx  Step1Knowledge.tsx  Step2Intent.tsx  Step2Outcome.tsx  Step3Outline.tsx  Step4Review.tsx  Step5Generate.tsx
ui/src/templates/: index copy.ts  index.ts
ui/src/templates/blog/: code_first.json  dev_blog.json  magazine.json  minimal.json
ui/src/templates/book/: acm_book.json  ebook_apple_books.json  ebook_epub3.json  ebook_kindle_kdp.json  ebook_minimal.json  generic_latex.json  oxford.json  springer.json
ui/src/templates/journal/: acm.json  apa.json  aps_pra.json  aps_prb.json  aps_prc.json  aps_prd.json  aps_pre.json  aps_prl.json  aps_prx.json  ieee.json  nature.json
ui/src/templates/mkdocs/: developer_portal.json  handbook.json  material.json  sphinx.json
ui/src/templates/proceedings/: acm_proc.json  ieee_proc.json  poster_only.json  single_track.json
ui/src/templates/workshop/: bootcamp_day.json  material_labs.json  notebook_flow.json  slides_handoff.json
workers/: __init__.py  worker.py
