# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-builder-server"
version = "1.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "gunicorn>=22.0.0",
  "orjson>=3.10.7",

  # settings / env
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",

  # RAG
  "chromadb>=0.5.11",
  "langchain-text-splitters>=0.2.2",

  # IBM watsonx.ai
  "ibm-watsonx-ai>=1.2.10",
  "langchain-core>=0.3.79",
  "langchain-ibm>=0.3.19",
  "litellm>=1.60.0",


  # CrewAI (optional in worker pipeline)
  "crewai>=0.56.0",

  # jobs / redis
  "redis>=7.0.1",
  "rq>=2.6.0",

  # security / rate limit
  "slowapi>=0.1.9",
  "pyjwt>=2.9.0",

  # observability
  "structlog>=24.1.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-requests>=0.46b0",
  "opentelemetry-instrumentation-redis>=0.46b0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "ruff>=0.6.8"]

[tool.setuptools]
# We use a flat layout (packages live at repo root)
package-dir = { "" = "." }

[tool.setuptools.packages.find]
# ✅ Only package our Python apps
include = ["server*", "workers*"]
# 🚫 Exclude non-package folders from discovery
exclude = ["ui*", "infra*", "redis*", "data*", "assets*", "backup*", "scripts*", "tests*", "examples*", "docs*"]

[tool.black]
line-length = 100

[tool.uvicorn]
factory = false
